correction prb espaces de chaque côté de la navbar en version mobile

--- a/css/sections/appBar.css
+++ b/css/sections/appBar.css
@@ -63,14 +63,12 @@
 
 @media (max-width: 768px) {  
   .appBar {
-    padding-left: 0;
-    padding-right: 0;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
     align-self: flex-start;
-    padding: 30px;
+    padding: 30px 0px;
   }
 
   .appBar__logo {
